=== master

* Assume local time if database timezone not specified when handling BC timestamps on JRuby 9.2.0.0 in the pg_extended_date_support extension (jeremyevans)

* Fix parsing of timetz types in the jdbc/postgresql adapter (jeremyevans)

* Make SQLTime.parse respect SQLTime.date and Sequel.application_timezone (jeremyevans)

* Add :top as an option in the list plugin (celsworth) (#1526)

* Fix Model#{ancestors,descendants,self_and_siblings} in the tree plugin when custom parent/children association names are used (jeremyevans) (#1525)

* Treat read-only mode error as disconnect error on mysql and mysql2 adapters, for better behavior on AWS Aurora cluster (jeremyevans)

* Don't use cached placeholder literalizers for in Dataset#{first,where_all,where_each,where_single_value} if argument is empty array or hash (jeremyevans)

* Support :tablespace option when adding tables, indexes, and materialized views on PostgreSQL (jeremyevans)

* Support :include option for indexes on PostgreSQL 11+ (jeremyevans)

* Allow the use of IN/NOT IN operators with set returning functions for Sequel::Model datasets (jeremyevans)

* Make many_to_pg_array associations in the pg_array_associations plugin work on PostgreSQL 11 (jeremyevans)

* Only load strscan library in pg_array extension if it is needed (jeremyevans)

* Don't remove related many_to_one associations from cache when setting column value to existing value for model instances that have not been persisted (jeremyevans) (#1521)

* Support ruby 2.6+ endless ranges in the pg_range extension (jeremyevans)

* Support ruby 2.6+ endless ranges in filters, using just a >= operator for them (jeremyevans)

=== 5.9.0 (2018-06-01)

* Support generated columns on MySQL 5.7+ and MariaDB 5.2+ (wjordan, jeremyevans) (#1517)

* Add escaped_like extension for creation of LIKE expressions with placeholders in the pattern without access to a dataset (jeremyevans)
