@@ -1,5 +1,7 @@
 === master
 
+* Use input type casts when using the postgres adapter with pg 0.18+ to reduce string allocations for some primitive types used as prepared statement arguments (jeremyevans)
+
 * Assume local time if database timezone not specified when handling BC timestamps on JRuby 9.2.0.0 in the pg_extended_date_support extension (jeremyevans)
 
 * Fix parsing of timetz types in the jdbc/postgresql adapter (jeremyevans)
